# VoiceTransl

./: ANIME_WHISPER_SETUP.md  API_DOCUMENTATION.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile.api  README.md  WEB_API_README.md  anime_whisper_backend.py  app.py  app.spec  config.txt  config.yaml.example  debug_audio_backends.py  debug_qwen3_output.py  debug_timestamps.py  deploy.sh  docker-compose.override.yml  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.yml  download_model.py  gemini_alignment_backend.py  hybrid_transcription_backend.py  log.txt  migrate_to_yaml.py  nginx-gateway.conf  openai_alignment_backend.py  pyproject.toml  qwen3_alignment_backend.py  requirements-api.txt  requirements.txt  srt2prompt.py  test_api.py  test_kikoeru_compatibility.py  tiny_whisper_backend.py  web_api.py  whisper_handler.py
.claude/: settings.local.json
analysis/: 00-master-implementation-plan.md  01-backend-architecture-fresh-design.md  02-frontend-api-contract-complete.md  03-configuration-system-comprehensive.md  04-task-management-system-comprehensive.md  05-file-processing-workflows-comprehensive.md  06-server-control-system-comprehensive.md  07-translation-integration-galtransl-comprehensive.md  08-websocket-implementation-realtime-updates.md  09-kikoeru-integration-dual-port-compatibility.md  10-storage-persistence-data-requirements.md  11-error-handling-strategy-comprehensive.md  12-performance-scalability-comprehensive.md
api/: __init__.py  __main__.py  main.py
backends/: __init__.py  hybrid_transcription_backend.py
scripts/: dev-setup.sh  (+1 more)
(+112 files in other folders)
